syntax = "proto3";
package strangelove_ventures.poa.v1;

import "google/api/annotations.proto";
// import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/strangelove-ventures/poa";

service Query {
  rpc QueryValidator(QueryValidatorRequest) returns (QueryValidatorResponse) {
    option (google.api.http).get = "/poa/validator";
  }
  rpc QueryValidators(QueryValidatorsRequest) returns (QueryValidatorsResponse) {
    option (google.api.http).get = "/poa/validators";
  }
  rpc QueryVouch(QueryVouchRequest) returns (QueryVouchResponse) {
    option (google.api.http).get = "/poa/vouch";
  }
  rpc QueryVouches(QueryVouchesRequest) returns (QueryVouchesResponse) {
    option (google.api.http).get = "/poa/vouches";
  }
}

message QueryValidatorRequest {
  string validator_address = 1;
}

message QueryValidatorResponse {
  string validator_address = 1;
  bool is_accepted = 2;
}

message QueryValidatorsRequest {
  // TODO: Bring this back once we can figure out the 
  // issue with the proto compilation
  // cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryValidatorsResponse {
  repeated QueryValidatorResponse validators = 1;
  // TODO: Bring this back once we can figure out the 
  // issue with the proto compilation
  // cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryVouchRequest {
  string candidate_address = 1;
  string voucher_address = 2;
}

message QueryVouchResponse {
  string candidate_address = 1;
  string voucher_address = 2;
  bool in_favor = 3;
}

message QueryVouchesRequest {
  string candidate_address = 1;
  // TODO: Bring this back once we can figure out the 
  // issue with the proto compilation
  // cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryVouchesResponse {
  repeated QueryVouchResponse vouches = 1;
  // TODO: Bring this back once we can figure out the 
  // issue with the proto compilation
  // cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
